--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,6 +1,7 @@
 !!! 5
 %html{lang: 'en'}
   %head
+    %title Tic Tac Toe
     = assets(:css)
     %script{src: '//code.jquery.com/jquery-3.1.1.min.js', integrity: 'sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=', crossorigin: 'anonymous'}
     = assets(:js)
