Tweak Javascript to the point where game is actually playable between 2 people

--- a/views/_player_choice.haml
+++ b/views/_player_choice.haml
@@ -1,3 +1,6 @@
 #choose_player.hidden
-  %button{type: 'button'}
+  %button.joiner{type: 'button'}
     Join Game
+#new_game
+  %button{type: 'button', onclick: 'newGame();'}
+    New Game
